<resources>
    <string name="app_name">Hallaka</string>
    <string name="a_platform_for_plants">A Platform for Plants</string>
    <string name="groom_your_look_with_us">Groom your look with us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_product_details">Add Product Details</string>
    <string name="submit">Submit</string>
    <string name="my_products">My Products</string>
    <string name="set_your_timing">Set your timing</string>
    <string name="remember_me">Remember Me?</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New User?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="lahore">Lahore</string>
    <string name="search_city_bar_icon">search city bar Icon</string>
    <string name="select_barber">Select Barber</string>
    <string name="book">Book</string>
    <string name="select_time">Select Time</string>
    <string name="start_time">Start time</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="upcoming_bookings">Upcoming Bookings</string>
    <string name="saloon_name">Saloon Name:</string>
    <string name="saloon">Saloon</string>
    <string name="nothing_here">Nothing here</string>
    <string name="details">Details</string>
    <string name="bookings_history">Bookings History</string>
    <string name="status">Status</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="cart">Cart</string>
    <string name="received">Received</string>
    <string name="deliver">Deliver</string>
    <string name="sign_out">Sign Out</string>
    <string name="exit">Exit</string>
</resources>